force-app/main/default/objects/Used_Medicine_Item_Template__c/Used_Medicine_Item_Template__c.object-meta.xml
<CustomObject>
    <label>Used Medicine Item Template</label>
    <nameField>
        <displayFormat>MIT-{0000}</displayFormat>
        <label>Medicine Item Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Used Medicine Item Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>