force-app/main/default/objects/Used_Medicine_Item_Template__c/fields/Expected_Doses_Count__c.field-meta.xml
<CustomField>
    <fullName>Expected_Doses_Count__c</fullName>
    <label>Expected Doses Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>