force-app/main/default/objects/Used_Medicine_Item_Template__c/fields/Medicine_Item__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Item__c</fullName>
    <label>Medicine Item</label>
    <referenceTo>Medicine_Item__c</referenceTo>
    <relationshipLabel>Used Medicine Item Templates</relationshipLabel>
    <relationshipName>Used_Medicine_Item_Templates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>