force-app/main/default/objects/Used_Medicine_Item_Template__c/fields/Treatment_Course_Template__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Course_Template__c</fullName>
    <label>Treatment Course Template</label>
    <referenceTo>Treatment_Course_Template__c</referenceTo>
    <relationshipLabel>Used Medicine Item Templates</relationshipLabel>
    <relationshipName>Used_Medicine_Item_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>