force-app/main/default/objects/Used_Medicine_Item_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Doses_Count__c</columns>
    <columns>Medicine_Item__c</columns>
    <columns>Treatment_Course_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>